syntax = "proto3";

option csharp_namespace = "PaymentService.Grpc";

package payment;

message PaymentRequest {
  string order_id = 1;
  string payment_method = 2;
  double amount = 3;
}

enum PaymentStatus {
	UNKNOWN = 0;
	ACCEPTED = 1;
	DECLINED = 2;
}

message PaymentResponse {
  PaymentStatus status = 1;
  string reason = 2;
}

message PaymentStage {
  string stage = 1;
  string description = 2;
  int32 transaction_id = 3;
}

service PaymentService {
  rpc Process (PaymentRequest) returns (PaymentResponse);

  rpc ProcessStream (PaymentRequest) returns (stream PaymentStage);

}